[metadata]
name=jong_toolkit
description="Jong 종 Toolkit"
author=FoxMaSk
author_email=foxmaskhome@gmail.com
maintainer=FoxMaSk
maintainer_email=foxmaskhome@gmail.com
url=https://github.com/foxmask/jong_toolkit
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=joplin, joplin-api, jong
version=1.0.0

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Communications

[options]
zip_safe=false

include_package_data=true

install_requires=
    joplin-api
    beautifulsoup4
    pypandoc

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
